assets/css/style.css
:root {
  --blue: #012052;
  --white: #fff;
  --teal: #22c9fc;
}

* {
  justify-content: center;
  text-align: center;

}

html {
  font-size: 62.5%;
  justify-content: center;
  text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 0.625rem;
  color: var(--white);
  font-weight: 700;
  line-height: 1.1;
  font-family: "Courier New", Courier, monospace;
}

h1 {
  font-size: 4rem;
  color: var(--white);
  padding: 9% 0 0 0;
}

h2 {
  font-size: 3.5rem;
  color: var(--teal);
}

h3 {
  font-size: 3rem;
}

h4 {
  font-size: 2.5rem;
}

h5 {
  font-size: 2rem;
}

h6 {
  font-size: 1.5rem;
  color: var(--white);
}

p {
  margin-bottom: 1rem;
  font-size: 1.5rem;
}

header,
footer {
  background-color: var(--blue);
  padding-top: 2%;
  text-align: center;
  position: relative;
}

footer {
  height: 100px;
  color: var(--white);
}

nav {
  background-color: var(--blue);
  padding: 6% 0;
}

li {
  display:inline;
  padding: 2%;
  text-decoration: none;
  font-size: 1.5rem;
  font-weight: bold;
  text-align: center;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  }

nav a {
  background-color: var(--teal);
  color: var(--blue);
  padding: 2%;
  border-radius: 2rem;
  text-align: center;
  text-decoration: none;
}

nav a:hover {
  background-color: var(--white);
}

nav a:active {
  background-color: var(--white);
}

.body {
  font-family: "Courier New", Courier, monospace;
  font-size: 1.75rem;
  line-height: 1.5;
  color: var(--white);
  background-color: var(--teal);
}

main {
  background-color: var(--white);
  color: var(--blue);
}

#about-me,
#projects,
#contact-me {
  padding: 5%;
  font-size: 1.5;
}

.about-me img {
  width: 50%;
  border-radius: 50%;
  margin: 3%;
}

.about-me p, .projects p {
  padding: 2% 4%;
  line-height: 1.5;
  font-size: 1.5rem;
  text-align: justify;
}

.card-box {
  display: flex;
  flex-wrap: wrap;
  margin: 2%;
}

.card-slide,
.hero-project {
  position: relative;
  flex-direction: row;
  justify-content: center;
  min-height: 200px;
  margin: 2%;
  background: var(--white);
  border: 3px solid var(--blue);
  color: var(--blue);
  padding: 3%;
  font-size: 2rem;
  text-align: center;
  width: 43%;
  border-radius: 10%;
  opacity: 80%;
  background-image: linear-gradient(
    rgba(114, 209, 247, 0.3) 0%,
    rgba(0, 4, 59, 0.6) 100%);
  );
  )
}

.hero-project {
  width: 90%;
  min-height: 300px;
}

.hero-project header, .card-slide header {
  font-size: 2rem;
  border: var(--white) solid 1px;
  color: var(--white);
  font-weight: bold;
  border-radius: 10px;
}

.hero-project:hover, .card-slide:hover {
  opacity: 100%;
}

.contact-me {
  margin: 6% 0;
}






@media screen and (min-width: 768px) {
  .about-me img {
    width: 25%;
  }

  .card-slide {
    width: 40%;
  }
}

/*@media screen and (min-width: 992px) {
  header {
    position: relative;
  }
  
  nav {
    background-color: var(--blue);
    display: inline;
    position: relative;
    top: 2rem;
    left: 2rem;
  }

  nav a {
    float: left;
  }

  .card-slide {
    width: 27.5%;
  }
}

